# deepracer-model-cli

./: .gitignore  README.MD  pyproject.toml
deepracer_model_cli/: cli.py
deepracer_model_cli/models/: model.py  util.py
tests/: test_deepracer_model_cli.py
